--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@ header li{
   width: 20px
 }
 
+
+
 a{
   text-decoration: none;
   color: #324453;
@@ -50,6 +52,28 @@ a{
   height: 80px;
   line-height: 80px;
 }
+
+h1{
+font-weight: 600;
+font-size: 50px;
+}
+
+.button1{
+  color: #FD6357;
+  border: 1px solid #FD6357;
+  padding: 10px 10px;
+  border-radius: 5px;
+
+}
+
+.button2{
+  color: white;
+  background-color: #FD6357;
+  padding: 10px 10px;
+  border-radius: 5px;
+
+}
+
 
 /* END COMMON CLASS E UTILY CLASS*/
 .navbar-top-cont{
@@ -66,6 +90,35 @@ padding-left: 15px;
   padding-right: 15px;
 }
 
-.navbar-bottom{
-  background-color:
+.navbar-bottom .menu1{
+  margin-top: 5px;
+}
+
+.jumbotron-cont{
+  width: 100%;
+  height:900px;
+  background-color: red;
+  background-image: url("../img/jumbotron.png");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: bottom 0 right 0;
+}
+
+.jumbotron{
+  padding-top: 150px;
+}
+
+.jumbotron > p:nth-child(2){
+padding-top:50px;
+font-weight: 300;
+}
+
+.jumbotron > p:nth-child(3){
+  padding-top:50px;
+}
+
+.jumbotron > p:nth-child(4){
+  font-size: 12px;
+  font-weight: 300;
+  padding-top:50px;
 }
